src/assets/style/modules/components/_touch-type-slide.scss
@use '../../core/config' as *;
@use '../../core/functions' as *;

.touch-type-slide {
  position: absolute;
  bottom: rem(10);
  z-index: index-level("lvl3");
}

.touch-type-slide__container {
  position: relative;
  display: inline-block;
  width: rem(80);
  height: rem(37);
  bottom: 0;
  font-size: 0;
}

.touch-type-slide__input {
  opacity: 0;
  width: 0;
  height: 0;
}

.touch-type-slide__slide {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: get-color(main, white);
  border-radius: rem(34);
}

.touch-type-slide__input + .touch-type-slide__slide::after {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.touch-type-slide__input:checked + .touch-type-slide__slide::after {
  content: get-icon("check");
  font-family: "icons";
  color: get-color(main, white);
  left: rem(12);
  font-size: rem(20);
}

.touch-type-slide__input:not(:checked) + .touch-type-slide__slide::after {
  content: get-icon("x");
  font-family: "icons";
  color: get-color(picross, square-true);
  font-size: rem(18);
  right: rem(12);
}

.touch-type-slide__slide::before {
  position: absolute;
  content: "";
  height: rem(22);
  width: rem(22);
  top: 50%;
  transform: translateY(-50%);
  left: rem(8);
  background-color: get-color(picross, square-true);
  transition: 0.4s;
  border-radius: 100%;
}

.touch-type-slide__input:checked + .touch-type-slide__slide {
  background-color: get-color(picross, square-true);
}

.touch-type-slide__input:focus + .touch-type-slide__slide {
  border: rem(1) solid get-color(picross, square-separation);
  box-shadow: 0 0 rem(7) get-color(picross, square-separation);
}

.touch-type-slide__input:checked:focus + .touch-type-slide__slide {
  border: rem(1) solid get-color(picross, square-true);
  box-shadow: 0 0 rem(7) get-color(picross, square-true);
}

.touch-type-slide__input:checked + .touch-type-slide__slide::before {
  background-color: get-color(main, white);
  transform: translate(180%, -50%);
}

